--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <%= render partial: "layouts/header" %>
   <body>
-    <div class="container">
+    <div class="main_container">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %><span class="close-alert">x</span></div>
       <% end %>
