--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
 				<th>Name</th>
 				<th>Email</th>
 				<th>Created On</th>
+				<th>Accepted On</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -13,7 +14,8 @@
 				<tr>
 					<td><%= user.name %></td>
 					<td><%= user.email %></td>
-					<td><%= user.created_at %></td>
+					<td><%= user.created_at.strftime("%d/%m/%Y %H:%M %p") %></td>
+					<td><%= user.invitation_accepted_at.present? ? user.invitation_accepted_at.strftime("%d/%m/%Y %H:%M %p") : "Not Accepted" %></td>
 				</tr>
 			<%end%>
 		</tbody>
