--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,7 +6,7 @@
 				<th>Name</th>
 				<th>Address</th>
 				<th>Created On</th>
-				<th>Created By</th>
+				<th>Proposed By</th>
 				<% if current_user.is_manager? %>
 					<th>Action</th>
 				<%end%>
