--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -7,7 +7,10 @@
     </style>
   </head>
 
-  <body style="font-family: Arial">
+  <body style="font-family: Arial; font-size: 16px;">
     <%= yield %>
   </body>
+  <style type="text/css">
+  	p { margin-top: 0; }
+  </style>
 </html>
