--- a/app/views/notification_mailer/finalize_place_info_to_users.html.erb
+++ b/app/views/notification_mailer/finalize_place_info_to_users.html.erb
@@ -1,6 +1,6 @@
 <div>
   <p>Hi, </p>
-  <p>A place has been finalized for team lunch.</p>
+  <p><%=@manager.name%> has been finalized a place for team lunch.</p>
   <p>Place information: </p>
   <p>
     <b>Place name: </b> <%=@place.name%>
@@ -8,9 +8,5 @@
   <p>
     <b>Place address: </b> <%=@place.address%>
   </p>
-  <p></p>
-  <p>--</p>
-  <p>Regards,</p>
-  <p><%=@manager.name%></p>
   <br>
 </div>
