--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,54 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Team Lunch</a>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <% if logged_in? %>
-        <% if current_user.is_manager? %>
-          <%= link_to "Team Members", users_path, class: "nav-item nav-link" %>
-          <%= link_to "Places", places_path, class: "nav-item nav-link" %>
+<nav id="sidebar" class="sidebar-wrapper">
+  <div class="sidebar-content">
+    <div class="sidebar-brand">
+      <a href="#">Team Lunch</a>
+      <div id="close-sidebar">
+        x
+      </div>
+    </div>
+    <div class="sidebar-header">
+      <div class="user-pic">
+        <img class="img-responsive img-rounded" src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+          alt="User picture">
+      </div>
+      <div class="user-info">
+        <span class="user-name">
+          <%= current_user.name%>
+        </span>
+        <span class="user-role">
+          <%= current_user.email%>
+        </span>
+        <span class="user-status">
+          <%= current_user.manager? ? "Manager" : "Developer"%>
+        </span>
+      </div>
+    </div>
+    <div class="sidebar-menu">
+      <ul>
+        <% if current_user.manager? %>
+          <li>
+            <%= link_to "Team Members", users_path, class: "nav-item nav-link" %>
+          </li>
         <%end%>
-        <%= link_to "Log out", logout_path, method: :delete, class: "nav-item nav-link" %>
-        <%= link_to "Signed in as: #{current_user.email}", "javascript:void(0)", class: "nav-item nav-link active userinfo" %>
-      <%else%>
-        <%= link_to "Log in", login_path, class: "nav-item nav-link" %>
-      <%end%>
+        <li>
+          <%= link_to "Events", events_path, class: "nav-item nav-link" %>
+        </li>
+        <li>
+          <%= link_to "Places", places_path, class: "nav-item nav-link" %>
+        </li>
+      </ul>
+    </div>
+    <!-- sidebar-menu  -->
+    <div class="sidebar-footer">
+      <div class="sidebar-menu pad-0">
+        <ul>
+          <li>
+            <%= link_to(logout_path, method: :delete) do%>
+              <span>Log Out</span>
+            <%end%>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
