--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
-  <%= render partial: "layouts/header" %>
   <body>
-    <div class="main_container">
+    <div >
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %><span class="close-alert">x</span></div>
       <% end %>
-      <%= yield %>
+      <%if current_user%>
+        <div class="page-wrapper chiller-theme toggled">
+          <a id="show-sidebar" class="btn btn-sm btn-dark" href="javascript:;">
+            =
+          </a>
+          <%= render partial: "layouts/header" %>
+          <!-- sidebar-wrapper  -->
+          <main class="page-content">
+            <div class="container-fluid">
+              <%= yield %>
+            </div>
+
+          </main>
+          <!-- page-content" -->
+        </div>
+      <%else%>
+        <%= yield %>
+      <%end%>
     </div>
   </body>
 </html>
