--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,6 @@
 <div class='form'>
   <%= form_with(model: event, local: true) do |form| %>
+    <h2><%= event.new_record? ? "Add Event" : "Update Event" %></h2>
     <% if event.errors.any? %>
       <div id='error_explanation'>
         <h2><%= pluralize(event.errors.count, 'error') %> prohibited this event form being saved:</h2>
@@ -26,23 +27,20 @@
 
     <div class='form-group'>
       <div class='input-group'>
-        <%= form.datetime_select :date, class: 'form-control', required: true, placeholder:'Date' %>    
+        <%= form.text_field :date, class: 'form-control', required: true, placeholder:'Date: dd/mm/yyyy hh:mm' %>    
       </div>
     </div>
 
-    Select places for the event:
-
-    <div class='form-group'>
-      <div class='input-group'>
-        <%#form.fields_for :places do |f|%>
-        <%#end%>
-        <% Place.all.each do |place| %>
-          <%= check_box_tag 'event[place_ids][]', place.id %>
+    <b>Select places for the event:</b>
+    <% Place.all.each do |place| %>
+      <div class='form-check'>
+        <%= check_box_tag 'event[place_ids][]', place.id, false, class: "form-check-input" %>
+        <label class="form-check-label" for="defaultCheck1">
           <%= place.name%>
-        <% end  %>
+        </label>
       </div>
-    </div>
-
+    <% end  %>
+    <br>
     <div class='form-group'>
       <%= form.submit :class => 'btn btn-primary login-btn btn-block' %>
     </div>
