--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="form-group col-md-12">
     <div class="places_list_page">
       <div class="page-header">
-        <h2 class="float-left">Events</h2>
+        <h2 class="float-left">Team Members</h2>
         <%=link_to "Invite Team Member", new_user_path, class: "btn btn-success create-btn float-right" %>
         <div class="clearfix"></div>
       </div>
