--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="form">
   <%= form_for(:user, url: users_path) do |f| %>
-    <h2 class="text-center">Add Team Member</h2>   
+    <h2>Add Team Member</h2>   
     <div class="form-group">
       <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-user"></i></span>
