--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
     <div class="places_list_page">
       <div class="page-header">
         <h2 class="float-left">Events</h2>
-        <%=link_to "New Event", new_event_path, class: "btn btn-success create-btn float-right" %>
+        <%=link_to "New Event", new_event_path, class: "btn btn-success create-btn float-right" if current_user.manager? %>
         <div class="clearfix"></div>
       </div>
       <hr>
@@ -24,11 +24,15 @@
             <tr>
               <td><%= event.name %></td>
               <td><%= event.description %></td>
-              <td><%= event.date %></td>
+              <td><%= format_date(event.date) %></td>
               <td><%= event.creator.email %></td>
               <td><%= link_to 'Show', event %></td>
-              <td><%= link_to 'Edit', edit_event_path(event) %></td>
-              <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <%if current_user.manager?%>
+                <td><%= link_to 'Edit', edit_event_path(event) %></td>
+                <td>
+                  <%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }%>
+                </td>
+              <%end%>
             </tr>
           <% end %>
         </tbody>
