--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,29 +1,51 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @event.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @event.description %>
-</p>
-
-<p>
-  <strong>Date:</strong>
-  <%= @event.date %>
-</p>
-
-<p>
-  <strong>Created by:</strong>
-  <%= @event.creator.email %>
-</p>
-
-<h3>Places:</h3>
-<%@event.places.each do |place|%>
-  <%= place.name%><br>
-<%end%>
-
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<div class="table-responsive panel">
+  <h3>Event Details</h3>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td class="text-grey">Event Name: </td>
+        <td><%= @event.name %></td>
+      </tr>
+      <tr>
+        <td class="text-grey">Description: </td>
+        <td><%= @event.description %></td>
+      </tr>
+      <tr>
+        <td class="text-grey">Date: </td>
+        <td><%= format_date(@event.date) %></td>
+      </tr>
+      <tr>
+        <td class="text-grey">Created by: </td>
+        <td><%= "#{@event.creator.name} (#{@event.creator.email})"%></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<br>
+<div class="table-responsive panel">
+  <h5>Places selected for the event:</h5>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Place Name</th>
+        <th>Voters</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%@event.places.each do |place|%>
+        <tr>
+          <td>
+            <%= place.name%>
+          </td>
+          <td>
+            <%=place.event_voters(@event.id).presence || '-'%>
+          </td>
+          <td>
+            <%= link_to "Vote", vote_place_path(place, event_id: @event.id) unless voted_event?(@event.id)%>
+          </td>
+        </tr>
+      <%end%>
+    </tbody>
+  </table>
+</div>
