--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,8 @@
+<!-- header for large screen -->
 <nav id="sidebar" class="sidebar-wrapper">
   <div class="sidebar-content">
     <div class="sidebar-brand">
-      <a href="#">Team Lunch</a>
-      <div id="close-sidebar">
-        x
-      </div>
+      <a href="/">Team Lunch</a>
     </div>
     <div class="sidebar-header">
       <div class="user-pic">
@@ -50,5 +48,41 @@
         </ul>
       </div>
     </div>
+  </div>
+</nav>
+
+<!-- header for small screen -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand float-left" href="/">Team Lunch</a>
+  <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="clearfix"></div> 
+
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li>
+        <%= link_to("javascript:;", class: "nav-item nav-link") do %>
+          <%= "#{current_user.name} (#{current_user.email})"%>
+        <%end%>
+      </li>
+      <li>
+        <div class="header-divider"></div>
+      </li>
+      <% if current_user.manager? %>
+        <li>
+          <%= link_to "Team Members", users_path, class: "nav-item nav-link" %>
+        </li>
+      <%end%>
+      <li>
+        <%= link_to "Events", events_path, class: "nav-item nav-link" %>
+      </li>
+      <li>
+        <%= link_to "Places", places_path, class: "nav-item nav-link" %>
+      </li>
+      <li>
+        <%= link_to "Log Out", logout_path, class: "nav-item nav-link" %>
+      </li>
+    </ul>
   </div>
 </nav>
