--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link rel="shortcut icon" href="/assets/fav-icon.jpeg">
   </head>
   <body>
     <div >
@@ -16,9 +17,6 @@
       <% end %>
       <%if current_user%>
         <div class="page-wrapper chiller-theme toggled">
-          <a id="show-sidebar" class="btn btn-sm btn-dark" href="javascript:;">
-            =
-          </a>
           <%= render partial: "layouts/header" %>
           <!-- sidebar-wrapper  -->
           <main class="page-content">
