implemented collection_check_boxes in event show page

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -31,15 +31,14 @@
       </div>
     </div>
 
+    
     <b>Select places for the event:</b>
-    <% Place.all.each do |place| %>
+    <%= form.collection_check_boxes :place_ids, Place.all, :id, :name do |b| %>
       <div class='form-check'>
-        <%= check_box_tag 'event[place_ids][]', place.id, false, class: "form-check-input" %>
-        <label class="form-check-label" for="defaultCheck1">
-          <%= place.name%>
-        </label>
+        <%= b.check_box(class: "form-check-input") %>
+        <%= b.label(class: "form-check-label") %>
       </div>
-    <% end  %>
+    <% end %>
     <br>
     <div class='form-group'>
       <%= form.submit :class => 'btn btn-primary login-btn btn-block' %>
