--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -41,7 +41,7 @@
     <% end %>
     <br>
     <div class='form-group'>
-      <%= form.submit :class => 'btn btn-primary login-btn btn-block' %>
+      <%= form.submit :class => 'btn btn-secondary login-btn btn-block' %>
     </div>
   <% end %>
 </div>
