--- a/app/assets/stylesheets/side_nav.css
+++ b/app/assets/stylesheets/side_nav.css
@@ -73,7 +73,7 @@ body {
 
   .page-wrapper.toggled .page-content {
 
-    padding-left: 300px;
+    padding-left: 260px;
 
   }
 
@@ -345,7 +345,7 @@ body {
 
 .page-wrapper .page-content > div {
 
-  padding: 20px 40px;
+  padding: 20px;
 
 }
 
