--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
     <div class="places_list_page">
       <div class="page-header">
         <h2 class="float-left">Events</h2>
-        <%=link_to "New Event", new_event_path, class: "btn btn-success create-btn float-right" if current_user.manager? %>
+        <%=link_to "New Event", new_event_path, class: "btn btn-outline-secondary create-btn float-right" if current_user.manager? %>
         <div class="clearfix"></div>
       </div>
       <hr>
@@ -14,7 +14,8 @@
             <th>Name</th>
             <th>Description</th>
             <th>Date</th>
-            <th>Created by</th>
+            <th class="text-center">Finalized Place</th>
+            <th class="text-center">Created by</th>
             <th colspan="3"></th>
           </tr>
         </thead>
@@ -25,7 +26,8 @@
               <td><%= event.name %></td>
               <td><%= event.description %></td>
               <td><%= format_date(event.date) %></td>
-              <td><%= event.creator.email %></td>
+              <td class="text-center"><%= event.finalized_place.presence || '-' %></td>
+              <td class="text-center"><%= event.creator.email %></td>
               <td><%= link_to 'Show', event %></td>
               <%if current_user.manager?%>
                 <td><%= link_to 'Edit', edit_event_path(event) %></td>
