--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,7 +3,7 @@
     <div class="places_list_page">
       <div class="page-header">
         <h2 class="float-left">Places</h2>
-        <%=link_to "Propose Place", new_place_path, class: "btn btn-success create-btn float-right" %>
+        <%=link_to "Propose Place", new_place_path, class: "btn btn-outline-secondary create-btn float-right" %>
         <div class="clearfix"></div>
       </div>
       <hr>
