--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -14,7 +14,7 @@
       </div>
     </div>        
     <div class="form-group">
-      <%= f.submit "Propose Place", :class => "btn btn-primary login-btn btn-block" %>
+      <%= f.submit "Propose Place", :class => "btn btn-secondary login-btn btn-block" %>
     </div>
   <% end %>
 </div>
