--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
       </div>
     </div>        
     <div class="form-group">
-      <%= f.submit "Add Team Member", :class => "btn btn-primary login-btn btn-block" %>
+      <%= f.submit "Add Team Member", :class => "btn btn-secondary login-btn btn-block" %>
     </div>
   <% end %>
 </div>
