Fat Model, Skinny Controller

--- a/app/views/users/accept_invitation.html.erb
+++ b/app/views/users/accept_invitation.html.erb
@@ -10,7 +10,7 @@
     <div class="form-group">
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-lock"></i></span>    
-        <%= f.password_field :password_confirmation, autofocus: false, autocomplete: "off", class: "form-control", required: true, placeholder:"Password Confirmation" %>    
+        <%= f.password_field :password_confirmation, autofocus: false, autocomplete: "off", class: "form-control", required: true, placeholder:"Confirm Password" %>    
       </div>
     </div>        
     <div class="form-group">
