--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       </div>
       <hr>
       
-      <table id="placesTable" class="table table-hover" cellspacing="0" width="100%">
+      <table id="usersTable" class="table table-hover" cellspacing="0" width="100%">
         <thead class="thead-light">
           <tr>
 						<th>Name</th>
@@ -31,3 +31,9 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(document).ready( function () {
+    $('#usersTable').DataTable();
+  });
+</script>
