--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -39,3 +39,10 @@
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript">
+  $(document).ready( function () {
+    $('#placesTable').DataTable();
+  });
+</script>
