--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -116,6 +116,10 @@ span.close-alert {
   cursor: pointer;
 }
 
+.form-check.check-place input {
+  top: 4px;
+}
+
 .userinfo{
   font-size: 18px;
 }
